--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <properties>
+		<docker.image.prefix>kammana</docker.image.prefix>
+		<sonar.host.url>http://ec2-34-205-143-65.compute-1.amazonaws.com:9000/</sonar.host.url>
+
+	</properties>
+
     <build>
         <plugins>
             <plugin>
