--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,17 @@
 		<sonar.host.url>http://ec2-34-205-143-65.compute-1.amazonaws.com:9000/</sonar.host.url>
 
 	</properties>
+   <distributionManagement>
+		 <snapshotRepository>
+		    <id>nexusRepo</id>
+		    <url>http://54.144.141.73:8081/repository/Test_Snapshot/</url>
+		 </snapshotRepository>
+		
+		<repository>
+		    <id>nexusRepo</id>
+		    <url>http://54.144.141.73:8081/repository/Test_Release/</url>
+		</repository>
+   </distributionManagement>
 
     <build>
         <plugins>
