--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,16 @@
 pipeline {
     agent any
 
+	tools {
+    jdk 'JAVA1.8'
+
+  }
+
     stages {
         stage('CLONE SCM') {
             steps {
                 echo 'cloning code from Github'
-				git branch: 'main', url: 'https://github.com/devopstraininghub/webapp1.git'
+				git branch: 'main', url: 'https://github.com/Anusha1256/webapp1.git'
             }
         }
 			
